[workspace]
members = [".", "channel", "macros", "task", "util", "util/macros"]
resolver = "2"

[package]
name = "allochronic"
version = "0.0.0-dev.1"
description = "Private Async Executor for Khonsulabs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/khonsulabs/allochronic"
categories = ["asynchronous"]
keywords = ["async", "asynchronous", "executor"]
edition = "2018"

[features]
tokio-support = ["tokio", "tokio-util"]

[dependencies]
allochronic-channel = { path = "channel" }
allochronic-macros = { path = "macros" }
allochronic-task = { path = "task" }
allochronic-util = { path = "util" }
core_affinity = "0.5"
futures-lite = "1"
futures-util = "0.3"
num_cpus = "1"
once_cell = "1.5"
parking_lot = "0.12"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tokio-util = { version = "0.6", features = ["rt"], optional = true }
vec_map = "0.8"

[profile.bench]
codegen-units = 1
lto = true

[dev-dependencies]
anyhow = "1"
criterion = { version = "0.3", features = ["html_reports"] }
quinn = { version = "0.7", default-features = false, features = ["tls-rustls"] }
rcgen = "0.9"
tokio = { version = "1", features = ["macros", "sync", "time"] }

[[example]]
name = "executor"
required-features = ["tokio-support"]

[[example]]
name = "quinn"
required-features = ["tokio-support"]

[[bench]]
name = "tokio"
harness = false
required-features = ["tokio-support"]
