[package]
name = "allochronic-channel"
version = "0.0.1-dev.1"
description = "Private channel crate for allochronic and khonsulabs."
repository = "https://github.com/khonsulabs/allochronic"
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "../README.md"
categories = ["asynchronous", "concurrency"]
keywords = ["async", "asynchronous", "concurrency", "concurrent", "lockfree"]

[dependencies]
allochronic-util = { path = "../util" }
flume = "0.10"
futures-channel = "0.3"
futures-util = "0.3"
parking_lot = "0.11"
thiserror = "1"
