[package]
name = "allochronic-util-macros"
version = "0.0.1-dev-1"
description = "Private utility macro crate for allochronic and khonsulabs."
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "../../README.md"

[lib]
proc-macro = true

[features]
default = []
test = []

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
allochronic-util = { path = "../" }
futures-executor = "0.3"
futures-util = "0.3"
